--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -15,5 +15,11 @@
   <%= @listing.price %>
 </p>
 
+<p>
+  <strong>User:</strong>
+  <%= @listing.user.email %>
+</p>
+
+
 <%= link_to 'Edit', edit_listing_path(@listing) %> |
 <%= link_to 'Back', listings_path %>
