--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,6 +28,7 @@
       <ul class="nav navbar-nav navbar-right">
       <% if signed_in? %>
        <li><button type="button" class="btn btn-default navbar-btn">Hi! <%= current_user.email %></button></li>
+       <li><a href="/listings"> Go to Listings</a></li>
         <li><%= link_to "Sign Out", sign_out_path, method: :delete %></li>
         <% else %>
         <li><%= link_to "Sign in", sign_in_path %></li>
