--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Listings</h1>
+<h1>Listings</h1>
 
 <table>
   <thead>
@@ -8,6 +8,7 @@
       <th>Title</th>
       <th>Description</th>
       <th>Price</th>
+      <th>User</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -18,6 +19,7 @@
         <td><%= listing.title %></td>
         <td><%= listing.description %></td>
         <td><%= listing.price %></td>
+        <td><%= listing.user.email %></td>
         <td><%= link_to 'Show', listing %></td>
         <td><%= link_to 'Edit', edit_listing_path(listing) %></td>
         <td><%= link_to 'Destroy', listing, method: :delete, data: { confirm: 'Are you sure?' } %></td>
