commit b4 image uploader

--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listings</h1>
+<h1>Listings of <%= current_user.email %></h1>
 
-<table>
+<table class="table table-stripped">
   <thead>
     <tr>
       <th>Title</th>
