--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -23,6 +23,9 @@
     <%= f.label :price %><br>
     <%= f.number_field :price %>
   </div>
+  <div class="field">
+    <%= f.file_field :images, multiple: true %><br>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
