--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -8,6 +8,7 @@
       <th>Title</th>
       <th>Description</th>
       <th>Price</th>
+      <th>Images</th>
       <th>User</th>
       <th colspan="3"></th>
     </tr>
@@ -20,6 +21,12 @@
         <td><%= listing.description %></td>
         <td><%= listing.price %></td>
         <td><%= listing.user.email %></td>
+        <td><%if listing.images? %>
+            <% listing.images.each do |image| %>
+              <%= image_tag(image.url) %>
+            <% end%>
+          <% end%>
+        </td>
         <td><%= link_to 'Show', listing %></td>
         <td><%= link_to 'Edit', edit_listing_path(listing) %></td>
         <td><%= link_to 'Destroy', listing, method: :delete, data: { confirm: 'Are you sure?' } %></td>
