--- a/app/views/bookings/edit.html.erb
+++ b/app/views/bookings/edit.html.erb
@@ -1,2 +1,71 @@
+<link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+<script src="//code.jquery.com/jquery-1.10.2.js"></script>
+<script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+<link rel="stylesheet" href="/resources/demos/style.css">
+<script>
+  $(function() {
+    $( "#from" ).datepicker({
+      defaultDate: "+1w",
+      changeMonth: true,
+      numberOfMonths: 3,
+      dateFormat: 'dd/mm/yy',
+      onClose: function( selectedDate ) {
+        $( "#to" ).datepicker( "option", "minDate", selectedDate );
+      }
+    });
+    $( "#to" ).datepicker({
+      defaultDate: "+1w",
+      changeMonth: true,
+      numberOfMonths: 3,
+      dateFormat: 'dd/mm/yy',
+      onClose: function( selectedDate ) {
+        $( "#from" ).datepicker( "option", "maxDate", selectedDate );
+      }
+    });
+  });
+  </script>
+
 <h1>Bookings#edit</h1>
 <p>Find me in app/views/bookings/edit.html.erb</p>
+
+<%= form_for([@listing, @booking]) do |f| %>
+  <% if @booking.listing.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@booking.listing.errors.count, "error") %> prohibited this booking from being saved:</h2>
+
+      <ul>
+        <% @booking.listing.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+
+<p>
+  <strong>Title:</strong>
+  <%= @booking.listing.title %>
+</p>
+
+<p>
+  <strong>Description:</strong>
+  <%= @booking.listing.description %>
+</p>
+
+<p>
+  <strong>Price:</strong>
+  <%= @booking.listing.price %>
+</p>
+
+<p>
+  <strong>Booked By:</strong>
+  <%= @booking.listing.user.email %>
+</p>
+  <label for="from">Check In Date</label>
+  <%= f.text_field :check_in, id: "from" %>
+  <label for="to">Check Out Date</label>
+  <%= f.text_field :check_out, id: "to" %>
+
+  <div class="actions">
+    <%= f.submit %>
+  </div>
+<% end %>
