--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -8,6 +8,7 @@
       <th>Price</th>
       <th>Check In</th>
       <th>Check Out</th>
+      <th>Days</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -19,6 +20,7 @@
         <td><%= booking.listing.price %></td>
         <td><%= booking.check_in %></td>
         <td><%= booking.check_out %></td>
+        <td><%= booking.day %></td>
       </tr>
     <% end %>
   </tbody>
