--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,25 +1,7 @@
-<%= form_for(@user) do |f| %>
-  <% if @user.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@user.errors.count, "error") %> prohibited this listing from being saved:</h2>
+<div class="form-group">
+  <%= form.text_field :email, type: 'email', :class => "form-group", :placeholder => "Email" %>
+</div>
 
-      <ul>
-      <% @user.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :first_name %><br>
-    <%= f.text_field :first_name %>
-  </div>
-  <div class="field">
-    <%= f.label :email %><br>
-    <%= f.text_field :email %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
+<div class="form-group">
+  <%= form.password_field :password, :class => "form-group", :placeholder => "Password" %>
+</div>
