--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,36 @@
-<h1>Editing User</h1>
 
-<%= render 'form' %>
+<div class="row">
+	<div class="col-md-offset-3 center">
+	<h2 class="form-signin-heading">Editing User</h2>
+		<%= form_for(@user) do |f| %>
+		  <% if @user.errors.any? %>
+		    <div id="error_explanation">
+		      <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
 
-<%= link_to 'Show', @user %> |
-<%= link_to 'Back', users_path %>
+		      <ul>
+		      <% @user.errors.full_messages.each do |message| %>
+		        <li><%= message %></li>
+		      <% end %>
+		      </ul>
+		    </div>
+		  <% end %>
+
+		  <div class="form-group">
+		    <%= f.label :first_name %><br>
+		    <%= f.text_field :first_name %>
+		  </div>
+		  <div class="form-group">
+		    <%= f.label :email %><br>
+		    <%= f.text_area :email %>
+		  </div>
+		  <div class="form-group">
+		    <%= f.label :password %><br>
+		    <%= f.password_field :password%>
+		  </div>
+
+		  <div class="actions">
+		    <%= f.submit "Update!" ,:class => "btn btn-primary"  %>
+		  </div>
+		<% end %>
+	</div>
+</div>
