--- a/app/views/reservation_mailer/booking_email.html.erb
+++ b/app/views/reservation_mailer/booking_email.html.erb
@@ -1,12 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta content="text/html; charset=UTF-8" http-equiv="Contect-Type">
-</head>
 <body>
-		<h1>Congratulations! You have received a booking from <%= @cutomer.email %></h1>
+		<h1>Congratulations! You have received a booking from <%= @customer %></h1>
 		<p>
 			You can see details of your new booking here: <%= @url%>
 		</p>
 </body>
-</html>
