--- a/app/views/transactions/new.html.erb
+++ b/app/views/transactions/new.html.erb
@@ -5,7 +5,7 @@
   <%= form_tag transactions_path do%>
     <p>Please enter your payment details:</p>
     <div id="dropin"></div>
-    
-    <%=submit_tag "Pay #{current_user.@booking.listing.price}$", class: "button mt1" %>
+   
+    <%= submit_tag "Pay #{current_user.bookings.find(params[:format]).listing.price}$", :class => "btn btn-primary" %>
   <%end%>
 </div>
